--- a/config/config.ini
+++ b/config/config.ini
@@ -6,8 +6,8 @@ browserName = Chrome
 #browserName = IE
 
 [testServer]
-#URL = http://123.206.57.62:17000
-URL = http://www.baidu.com
+URL = http://123.206.57.62:17000
+;URL = http://www.baidu.com
 
 [login]
 telphone = 15911111111
